Fix: center contacts layout on mobile view

--- a/src/css/contacts.css
+++ b/src/css/contacts.css
@@ -11,13 +11,20 @@
 .contacts__info-block {
   display: flex;
   flex-direction: column;
-  align-items: flex-start; 
-  text-align: left;
+  align-items: center; 
+  text-align: center;  
+}
+
+.contacts__info-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
 }
 
 .contacts__decor {
   display: flex;
-  justify-content: flex-start;
+  justify-content: center; 
   margin-bottom: 24px;
 }
 
@@ -55,7 +62,7 @@
   display: flex;
   flex-direction: column;
   gap: 16px;
-  align-items: flex-start;
+  align-items: center;
 }
 
 .contacts__link {
@@ -209,6 +216,20 @@
 
   .contacts__info-block {
     flex: 1;
+    align-items: flex-start;
+    text-align: left;
+  }
+
+  .contacts__info-content {
+    align-items: flex-start; 
+  }
+
+  .contacts__decor {
+    justify-content: flex-start; 
+  }
+
+  .contacts__list {
+    align-items: flex-start; 
   }
 
   .contacts__form {
